--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Dinusha Bodhinayake",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
     "dev-server": "webpack-dev-server --open --config webpack.dev.js",
@@ -20,11 +19,8 @@
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
     "express": "^4.17.1",
-    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
@@ -36,7 +32,6 @@
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
@@ -44,9 +39,14 @@
     "validator": "^11.1.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "live-server": "^1.2.1",
-    "mini-css-extract-plugin": "^0.9.0",
     "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.12.0",
+    "webpack-dev-server": "^3.9.0"
   }
 }
